fix game page overflow-x

--- a/frontend/src/components/stylesheets/game.scss
+++ b/frontend/src/components/stylesheets/game.scss
@@ -1,100 +1,102 @@
-.gameDivContainer{
-    padding-top: 30px;
-    background: linear-gradient(60deg, #ee7752, #e73c7e, #23a6d5, #134dd4);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+.gameDivContainer {
+  padding-top: 30px;
+  padding-right: 6em;
+  background: linear-gradient(60deg, #ee7752, #e73c7e, #23a6d5, #134dd4);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
 }
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
-.winlosstiecontainer{
-    color: white;
-    background-color: black;
-    padding: 5px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    margin-right: 20px;
+.winlosstiecontainer {
+  color: white;
+  background-color: black;
+  padding: 5px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  margin-right: 20px;
 }
-.daddyContainerDiv{
-    display: flex;
-    justify-content: center;
+.daddyContainerDiv {
+  display: flex;
+  justify-content: center;
 }
-.containerDiv{
-    display: flex;
-    align-items: flex-end;
-    position: relative;
-    right: 40px;
+.containerDiv {
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+  right: 40px;
 }
-.endGameMess{
-    position: relative;
-    bottom: 520px;
+.endGameMess {
+  position: relative;
+  bottom: 520px;
 }
-#winMsg{
-    font-variant-caps: small-caps;
-    font-size: 40px;
-    color: white;
+#winMsg {
+  font-variant-caps: small-caps;
+  font-size: 40px;
+  color: white;
 }
-.rematchbtn{
-    background-color: white;
-    border: 1px solid white;
-    border-radius: 25px;
-    box-shadow: 0px 0px 8px 8px #ffffff25;
-    color: black;
-    padding: 10px;
-    padding-inline: 30px;
-    font-size: 30px;
-    cursor: pointer;
-    transform: scale(1.00);
-    transition-duration: .3s;
-    text-transform: uppercase;
-    font-weight: 700;
+.rematchbtn {
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 25px;
+  box-shadow: 0px 0px 8px 8px #ffffff25;
+  color: black;
+  padding: 10px;
+  padding-inline: 30px;
+  font-size: 30px;
+  cursor: pointer;
+  transform: scale(1);
+  transition-duration: 0.3s;
+  text-transform: uppercase;
+  font-weight: 700;
 }
-.rematchbtn:hover{
-    transform: scale(1.06);
-    transition-duration: .3s;
+.rematchbtn:hover {
+  transform: scale(1.06);
+  transition-duration: 0.3s;
 }
-.rematchbtn:focus{
-    outline: none;
+.rematchbtn:focus {
+  outline: none;
 }
 .fall {
-    animation-name: fall-animation;
-    animation-duration: 500ms;
+  animation-name: fall-animation;
+  animation-duration: 500ms;
 }
 @keyframes fall-animation {
-    from {
-        transform: translateY(-1000%);
-    }
-    to {
-        transform: translateY(0%);
-    }
+  from {
+    transform: translateY(-1000%);
+  }
+  to {
+    transform: translateY(0%);
+  }
 }
-.red{
-    background-color: red;
+.red {
+  background-color: red;
 }
-.yellow{
-    background-color: yellow;
+.yellow {
+  background-color: yellow;
 }
-.hoveredred{
-    background-color:#fe6599;
+.hoveredred {
+  background-color: #fe6599;
 }
-.hoveredyellow{
-    background-color: #ffff99;
+.hoveredyellow {
+  background-color: #ffff99;
 }
-.hovered{
-    background-color: #ffffff8c;
+.hovered {
+  background-color: #ffffff8c;
 }
-.currentPlayer, .winMsg {
-    color: #fff;
-    font-weight: 700;
-    font-size: 20px;
+.currentPlayer,
+.winMsg {
+  color: #fff;
+  font-weight: 700;
+  font-size: 20px;
 }
